force-app/main/default/objects/Payment_Log__c/Payment_Log__c.object-meta.xml
<CustomObject>
    <label>Payment Log</label>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>