force-app/main/default/objects/Payment_Log__c/fields/Error_Details__c.field-meta.xml
<CustomField>
    <fullName>Error_Details__c</fullName>
    <label>Error Details</label>
    <length>120</length>
    <type>Text</type>
</CustomField>