force-app/main/default/objects/Payment_Log__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Playment Logs</relationshipLabel>
    <relationshipName>Playment_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>